RESOLVED FIXED279319
CSS cursor should not eagerly evaluate calc() values
https://bugs.webkit.org/show_bug.cgi?id=279319
Summary CSS cursor should not eagerly evaluate calc() values
Sam Weinig
Reported 2024-09-08 08:25:11 PDT
CSS cursor should not eagerly evaluate calc() values.
Attachments
Sam Weinig
Comment 1 2024-09-08 08:28:09 PDT
EWS
Comment 2 2024-09-08 12:08:40 PDT
Committed 283316@main (cef722bf55c7): <https://commits.webkit.org/283316@main> Reviewed commits have been landed. Closing PR #33292 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-08 12:09:15 PDT
EWS
Comment 4 2024-09-19 13:33:39 PDT
Committed 283286.99@safari-7620-branch (e899d7e69294): <https://commits.webkit.org/283286.99@safari-7620-branch> Reviewed commits have been landed. Closing PR #1849 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.