CSS cursor should not eagerly evaluate calc() values https://bugs.webkit.org/show_bug.cgi?id=279319

Reviewed by Darin Adler.

Replace eager evaluation of calc() for the x/y coordinates
in CSS cursor values with normal storage or primitive values
and resolution at style building.

Retained existing casting from double -> int rather than
rounding to minimize changes.

* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/parsing/cursor-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/parsing/cursor-valid.html:
    - Add tests showing retaining calc for specified value.

* Source/WebCore/css/CSSCursorImageValue.cpp:
* Source/WebCore/css/CSSCursorImageValue.h:
* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
* Source/WebCore/rendering/style/StyleCursorImage.cpp:
* Source/WebCore/rendering/style/StyleCursorImage.h:
* Source/WebCore/style/StyleBuilderCustom.h:

Canonical link: https://commits.webkit.org/283316@main